k8s_manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb   # ✅ Add this line
  rules:
  - host: ameydeshmukh.shop   # ✅ Ensure this matches your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: banking-app-service
            port:
              number: 80
